--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 GOOGLE_CLIENT_ID=70220483254-cv41h27s9qs2gm2gtobgamkld4rr93nc.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=iTOKvaSenOctIYQy8jKhyemJ
+
+HMAC_METHOD='HS256'
+HMAC_SECRET=4v*6e8y,~/VM=bb4
