--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,13 @@
 /storage/*
 !/storage/.keep
 
-/node_modules
+/node_modules/
 /yarn-error.log
 
-/public/assets
+/public/assets/
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+.env
